
 * [Disable-FirewallStatefulFtp](http://get-carbon.org/help/Disable-FirewallStatefulFtp.html)
 * [Enable-FirewallStatefulFtp](http://get-carbon.org/help/Enable-FirewallStatefulFtp.html)
 * [Enable-Ssl](http://get-carbon.org/help/Enable-Ssl.html)
 * [Install-Service](http://get-carbon.org/help/Install-Service.html)
 * [Install-SmbShare](http://get-carbon.org/help/Install-SmbShare.html)
 * [Remove-SslCertificateBinding](http://get-carbon.org/help/Remove-SslCertificateBinding.html)
 * [Set-SslCertificateBinding](http://get-carbon.org/help/Set-SslCertificateBinding.html)
 
### Obsolete Functions and Parameters

The following functions are now obsolete. Please don't use them and stop using them if you are. They will be removed from a future major version of Carbon. You'll get warnings if you use them.

 * [Complete-Job](https://get-carbon.org/help/Complete-Job.html): It's total crap. Use PowerShell's `Wait-Job` cmdlet instead.
 * [Invoke-AppCmd](https://get-carbon.org/help/Invoke-AppCmd.html): Switch to Carbon's IIS functions, or use [Get-IisConfigurationSection](https://get-carbon.org/help/Get-IisConfigurationSection.html) to get `ConfigurationElement` objects from the `Microsoft.Web.Administration` API that you can modify.
 
The following functions now have obsolete parameters, which will be removed from a future major version of Carbon. You'll get warnings if you use them.

 * [Install-IisAppPool's](http://get-carbon.org/help/Install-IisAppPool.html) `UserName` and `Password` parameters. Use the new `Credential` parameter instead.
 * [Install-Msi's](http://get-carbon.org/help/Install-Msi.html) `Quiet` switch. `Install-Msi` always installs in quiet mode. Please remove usages.
 * [Install-Service's](http://get-carbon.org/help/Install-Service.html) `Password` parameter. Use the new `Credential` parameter instead.
 * [Install-User's](http://get-carbon.org/help/Install-User.html) `UserName` and `Password` parameters. Use the new `Credential` parameter instead.
