@@ -16,19 +16,21 @@ function Resolve-NetPath
 {
     <#
     .SYNOPSIS
-    Returns the path to Windows' `net.exe` command.
+    OBSOLETE. Will be removed in a future version of Carbon.
     
     .DESCRIPTION
-    You can't always assume that `net.exe` is in your path.  Use this function to return the path to `net.exe` regardless of paths in your path environment variable.
+    OBSOLETE. Will be removed in a future version of Carbon.
     
     .EXAMPLE
-    Resolve-NetPath
+    Write-Error 'OBSOLETE. Will be removed in a future version of Carbon.'
     
-    Returns `C:\Windows\system32\net.exe`.  Usually.
+    Demonstates that `Resolve-NetPath` is obsolete and you shouldn't use it.
     #>
     [CmdletBinding()]
     param(
     )
+
+    Write-Warning ('Resolve-NetPath is obsolete and will be removed in a future version of Carbon. Do not use.')
     
     $netCmd = Get-Command -CommandType Application -Name net.exe* |
                 Where-Object { $_.Name -eq 'net.exe' }
